# testkit

./: CHANGELOG.md  README.md  catalog-info.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  issue-triage.yml  publish.yml
.windsurf/rules/: mcp-tools.md
docs/: AGENT_HANDOVER.md  CORE_CONTEXT.md
iil_testkit/: __init__.py  assertions.py  factories.py  fixtures.py  plugin.py  tenant_mixins.py
iil_testkit/contrib/: __init__.py  tenants.py
plugin_tests/: conftest.py  test_should_plugin_enforce_naming.py
tests/: conftest.py  settings.py  test_assertions.py  test_factories.py  test_fixtures.py  test_plugin.py  test_tenant_mixins.py
tests/plugin/: conftest.py  test_should_plugin_enforce_naming.py
